# AMTradingCommandCenter

./: .gitignore  CLAUDE.md  StartPlaybook.bat  StartTraderJournal.bat
.claude/: settings.local.json
PlayBook/: .gitignore  CLAUDE.md  PlayBook.jsx  index.html  package-lock.json  package.json  playbook.config.js  vite.config.js
PlayBook/src/: main.jsx
StockScanner/: .gitignore  CLAUDE.md  run_all.bat  run_scanner.bat  watch_connections.ps1
StockScanner/backend/: .env.example  README.md  pyproject.toml  requirements.txt  run_dev.bat
StockScanner/backend/app/: config.py  main.py
StockScanner/backend/app/db/: session.py  setup.py
StockScanner/backend/app/enrichment/: cache.py  dt.py  edgar.py  rename.py
StockScanner/backend/app/market/: candles.py  live_hub.py  polygon.py
StockScanner/backend/app/routes/: candles.py  enrich.py  scanner.py
StockScanner/backend/app/scanner_bridge/: state.py  watcher.py
StockScanner/frontend/: README.md  next.config.mjs  package-lock.json  package.json  run_dev.bat  tailwind.config.ts
StockScanner/scanner_v2/: alerts.py  candle_emitter.py  config.py  ingest.py  main.py  models.py  persistence.py  scanner.py  test_ws.py  trade_gateway.py
TradeIngest/: CLAUDE.md  README.md  clean_x000d_notes.py  db_setup.py  import_xlsx.py  ingest_trades.py  zero_cbra_commissions.py
TradePlanner/: CLAUDE.md  index.html  package-lock.json  package.json  plan.md
TradePlanner/src/: App.jsx  constants.js  index.css
TraderJournal/: .gitignore  CLAUDE.md  README.md  Start Trader Journal.bat  chart-paths.json
(+89 files in other folders)
