[project]
name = "stockscanner-backend"
version = "0.1.0"
description = "FastAPI backend unifying scanner_v2 + TickerEnrich"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "websockets>=13",
    "watchfiles>=0.24",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8"]

[tool.ruff]
line-length = 100
target-version = "py311"
